# N-body-simulations

./: README.md  pyproject.toml
.github/workflows/: wf.yml
docs/: References  requirements.txt
docs/SystemLogs/: KPI_File_lists.txt  KPI_Scripts.txt
docs/system-logs/: KPI_Attractor.txt  KPI_General.txt  KPI_Maintenance.txt  KPI_VDF.txt  kpi_N-body-simulations.txt
fixes/: fix_f_string_with_empty_expression.md  fix_keyword_before_positional_argument.md
src/: bin_halo_legacy.py  modulus.py  run_all_gadget_python.sh
src/Attractor/: Read.py  Sigma_calc_OOP.py  Sigma_plot.py  gamma_kappa_beta.py  time_evolution_gamma_kappa_beta.py
src/Energy_exchange/: Energy_exchange_D1.py  Energy_exchange_gamma_kappa_beta.py  Energy_exchange_sigma.py  Energy_exchange_sigma_mass_bins.py  Energy_perturbation_only_rand_test.py  Energy_perturbation_test.py  Sigma_Delta_G_to_Delta_E.py
src/File_lists/: data_lists.py  define_paths.py  file_lists.py  file_lists_energy.py  readVDF_2_new_files.py  read_VDF2_file_list.py  snapshot_files.py
src/General/: Gammas_and_R_middles.py  Mock_data.py  Remove_free_particles.py  bin_halo.py  colors_and_symbols.py  create_snapshot.py  load_halo.py  no_of_particles_and_particle_mass.py  radius_and_velocity_funcs.py  rho_gaussian_and_tsallis.py  velocity_check.py
src/Maintenance/: KPI.py  pylab_test.py  regex_upper.py  rename.py  request_data.py  terminal_code.py
src/VDF/: VDF.py  VDF_LOS.py  VDFnetwork.py  VDFvelocityBins.py  readVDF.py  readVDF2.py  readVDF_2_new_plot.py  splitVDFt.py  v_spherical_and_v_bins.py
test/: test_read.py
(+1 files in other folders)
