[tool.poetry]
name = "N-body-simulations"
version = "0.1.0"
description = "Simulations of dynamical systems of particles under the influence of gravity"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# pytest = "^7.4.0"
# pytest-cov = "^4.1.0"
flake8 = "^7.3.0"
ruff = "^0.13.2"
mypy = "^1.4.1"
# wily = "^1.24.2"
# sphinx = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
